--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,7 @@ jobs:
         go-version: 1.17
 
     - name: Test
-      run: MONGODB_CONNECTION_STRING=mongodb://localhost:27017/test;MONGODB_DATABASE=test go test -v ./...
+      run: go test -v ./...
+      env:
+          MONGODB_CONNECTION_STRING: mongodb://localhost:27017/test
+          MONGODB_DATABASE: test
